# AoCLangAgnostic

./: .gitignore
rust/2015/day1/p1/src/: main.rs
rust/2015/day4/p1/: Cargo.toml
rust/2015/day4/p2/: Cargo.toml
rust/2016/day4/p2/: Cargo.toml
rust/2017/: Cargo.toml
rust/2017/day-01/: Cargo.toml
rust/2017/day-01/src/: lib.rs
rust/2017/day-02/src/: lib.rs
rust/2017/day-03/src/: lib.rs
rust/2017/day-04/benches/: benches.rs
rust/2017/day-04/src/: lib.rs
rust/2017/day-05/src/: lib.rs
rust/2017/day-06/src/: lib.rs
rust/2017/day-07/src/: lib.rs
rust/2018/: Cargo.toml  justfile
rust/2018/day-01/src/: lib.rs
rust/2018/day-02/: Cargo.toml
rust/2018/day-02/src/: lib.rs
rust/2018/day-03/src/: lib.rs
rust/2018/day-04/: Cargo.toml
rust/2018/day-04/src/: lib.rs
rust/2018/day-05/src/: lib.rs
rust/2018/day-06/: Cargo.toml
rust/2018/day-06/benches/: benches.rs
rust/2018/day-06/src/: lib.rs
rust/2023/: Cargo.toml
rust/2023/day-01/: Cargo.toml
rust/2023/day-01/src/: lib.rs
rust/2023/day-02/src/: lib.rs
rust/2023/day-03/src/: lib.rs
rust/2023/day-04/src/: lib.rs
rust/2024/: Cargo.toml
rust/2024/day-01/src/: lib.rs
rust/2024/day-02/src/: lib.rs
rust/2024/day-03/: Cargo.toml
rust/2024/day-03/src/: lib.rs
rust/2024/day-04/: Cargo.toml
rust/2024/day-04/src/: lib.rs
rust/2024/day-05/src/: lib.rs
rust/2024/day-06/src/: lib.rs
rust/2024/day-07/: Cargo.toml
rust/2024/day-07/benches/: benches.rs
rust/2024/day-07/src/: lib.rs
rust/playground/ascii_conv_crate/: Cargo.toml
rust/playground/ascii_conv_crate/src/: main.rs
(+20 files in other folders)
